Updated packages.tex to allow fncychap and vervatim

--- a/paquetes/packages.tex
+++ b/paquetes/packages.tex
@@ -18,7 +18,12 @@
 \usepackage[round,authoryear]{natbib}
 \usepackage{url}
 \usepackage{doi}
+\usepackage{fancyvrb}
+%fancy chapters -> http://mirror.utexas.edu/ctan/macros/latex/contrib/fncychap/fncychap.pdf
+\usepackage[Lenny]{fncychap}
 \spanishdecimal{.}
+\usepackage{booktabs} % Allows the use of \toprule, \midrule and \bottomrule in tables for horizontal lines
+
 
 % hyperref.sty parameters
 % more info in http://en.wikibooks.org/wiki/LaTeX/Hyperlinks
