--- a/thesis.tex
+++ b/thesis.tex
@@ -1,7 +1,7 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%  Template to builp up a thesis     %%
-%% Written by Oscar Barragán 09-01-14 %%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%  Template to create a nice thesis     %%
+%%  Written by Oscar Barragán 09-01-14   %%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \documentclass[10pt,letterpaper,twoside,openright]{book}
 
