--- a/frontmatter/portada.tex
+++ b/frontmatter/portada.tex
@@ -17,46 +17,29 @@
 
 	\begin{center}
 
-		\huge{\color{red}UNIVERSIDAD DE GUANAJUATO}
+		\huge{\color{red}UNIVERSITY NAME}
 		\vspace*{0.5cm}
 	
-		\huge{\color{red}CAMPUS GUANAJUATO}
-		\vspace*{0.5cm}		
 				
-		\huge{\color{red}DIVISIÓN DE CIENCIAS NATURALES Y EXACTAS} 	
+		\huge{\color{red}UNIVERSITY DEPARTMENT} 	
 		\vspace*{0.5cm}	
 		
-		\includegraphics[scale=1]{escudo.png}
+		\includegraphics[width=0.3\textwidth]{escudo.png}
 
-		%\rule{15cm}{0.5mm}			
-		%\huge{\emph{Simulación magnetohidrodinámica de radiogalaxias}}			
-		%\huge{Simulación magnetohidrodinámica de radiogalaxias}			
-		%\huge{\emph{INESTABILIDADES GRAVITACIONALES ALREDEDOR DE DISCOS CIRCUNPLANETARIOS}}			
-		\huge{\color{red}INESTABILIDADES GRAVITACIONALES ALREDEDOR DE DISCOS CIRCUNPLANETARIOS}			
-		%\rule{15cm}{0.5mm}
+		\huge{\color{red}A REALLY NICE TITTLE}			
 			
 		\vspace*{0.5cm}
-		\Large{Tesis presentada al} \\
-		\huge{\color{red}DEPARTAMENTO DE ASTRONOMÍA}
-		\vspace*{0.5cm}		
-		
-		\vspace*{0.5cm}
-		\Large{como requisito para la obtención del grado de} \\
-		\huge{\color{red}MAESTRÍA EN CIENCIAS (ASTRONOMÍA)}
-		\vspace*{0.5cm}		
-
-		\vspace*{0.5cm}
-		\Large{por} \\
+		\Large{by} \\
 		\huge{\color{red}OSCAR IGNACIO BARRAGÁN VILLANUEVA}
 		\vspace*{0.5cm}		
 		
 		\vspace*{0.5cm}
-		\Large{asesorado por} \\
-		\huge{\color{red}DR. ERICK NAGEL VEGA}
+		\Large{advisor} \\
+		\huge{\color{red}DR. SABIONDO}
 		\vspace*{0.5cm}		
 
 		\vspace*{0.5cm}		
-                \huge{Guanajuato, Gto. - September, 2014}		
+                \huge{ City - \today}		
 		\vspace*{0.5cm}		
 		
         \vfill		
