Changed some files

--- a/thesis.tex
+++ b/thesis.tex
@@ -30,7 +30,7 @@
 
   \appendix % This indicates here starts an appendix
 
-  \include{./appendix/ap1}	
+  \include{appendix/ap1}	
 			
   \backmatter % The references are here
 
