Added new sections to frontmatter

--- a/thesis.tex
+++ b/thesis.tex
@@ -14,7 +14,7 @@
   \frontmatter %the first pages of the thesis
 
   \include{frontmatter/portada}	
-  \blankpage	
+  \include{frontmatter/template}	
   \include{frontmatter/dedicatoria}	
   \blankpage	
   \include{frontmatter/resumen}	
