Renamed some files

--- a/paquetes/commands.tex
+++ b/paquetes/commands.tex
@@ -15,3 +15,23 @@
     }
 %--------------------------------------------
 
+
+%Defined commands for this thesis       
+       
+\newcommand{\far}{\texttt{FARGO3D} }
+
+\newcommand{\ftools}{\texttt{fargo\_tools} }
+
+\newcommand{\cpd}{circumplanetary disk }
+
+\newcommand{\csd}{circumstellar disk }
+
+\newcommand{\cpds}{circumplanetary disks }
+
+\newcommand{\csds}{circumstellar disks }
+
+\newcommand{\proplyd}{proplyd }    
+
+\newcommand{\abbrlabel}[1]{\makebox[3cm][l]{\textbf{#1}\ \dotfill}}
+\newenvironment{abbreviations}{\begin{list}{}{\renewcommand{\makelabel}{\abbrlabel}}}{\end{list}}
+
