--- a/thesis.tex
+++ b/thesis.tex
@@ -19,6 +19,7 @@
   \blankpage	
   \include{frontmatter/abstract}	
   \tableofcontents % it generates authomatically a index
+  \include{frontmatter/acronyms}
   \listoffigures
   \listoftables
 
