Added the repository website in template.tex

--- a/frontmatter/template.tex
+++ b/frontmatter/template.tex
@@ -4,6 +4,8 @@
 
 \begin{center}
 \footnotesize{
-This thesis was created using the free template available in \url{myweb}, you can share it if you want. 
+This thesis was created using the free \texttt{thesis\_chida} template \\
+available in \url{https://github.com/oscaribv/thesis_chida}, \\
+if you liked, share it.
 }
 \end{center}
