--- a/paquetes/packages.tex
+++ b/paquetes/packages.tex
@@ -2,7 +2,7 @@
 %All the magic stuffs are here
 %You can modify if you want
 
-\usepackage[spanish,english]{babel} %spanish and english allowed
+\usepackage[spanish,english]{babel} %english allowed
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amsthm}
@@ -17,7 +17,10 @@
 \usepackage{hyperref}
 \usepackage[round,authoryear]{natbib}
 \usepackage{url}
+\usepackage[titletoc,toc,page]{appendix}
 \usepackage{doi}
+\usepackage{fancyvrb}
+\usepackage{color}
 
 %fancy chapters -> http://mirror.utexas.edu/ctan/macros/latex/contrib/fncychap/fncychap.pdf
 %\usepackage[Sonny]{fncychap}
@@ -36,7 +39,7 @@
 % hyperref.sty parameters
 % more info in http://en.wikibooks.org/wiki/LaTeX/Hyperlinks
 \hypersetup{
-    %bookmarks=true,         % show bookmarks bar?
+    bookmarks=true,         % show bookmarks bar?
     %unicode=true,          % non-Latin characters in Acrobat?s bookmarks
     %pdftoolbar=true,        % show Acrobat?s toolbar?
     %pdfmenubar=true,        % show Acrobat?s menu?
@@ -53,6 +56,6 @@
     linkcolor=red,          % color of internal links (change box color with linkbordercolor)
     citecolor=blue,        % color of links to bibliography
     filecolor=magenta,      % color of file links
-    urlcolor=gray         % color of external links
+    urlcolor=blue     % color of external links
 }
 
