--- a/paquetes/packages.tex
+++ b/paquetes/packages.tex
@@ -1,8 +1,9 @@
 
-%All the magic stuffs are here
-%You can modify if you want
+%ALL THE MAGIC STUFFS GO HERE
+%MODIFY THEM IF YOU WANT
 
-\usepackage[spanish,english]{babel} %english allowed
+%-------- PACKAGES SECTION ------------
+\usepackage[spanish,english]{babel} 
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amsthm}
@@ -21,41 +22,43 @@
 \usepackage{doi}
 \usepackage{fancyvrb}
 \usepackage{color}
-
-%fancy chapters -> http://mirror.utexas.edu/ctan/macros/latex/contrib/fncychap/fncychap.pdf
-%\usepackage[Sonny]{fncychap}
 \usepackage[Sonny]{fncychap}
+\spanishdecimal{.}
+\usepackage{booktabs}
+%-------- PACKAGES SECTION ------------
+
+%-------- FCHAPTER SECTION ------------
+%fancy chapters -> http://mirror.utexas.edu/ctan/macros/latex/contrib/fncychap/fncychap.pdf
 \ChNameUpperCase   
 %\ChNameUpperCase   
 \ChNameVar{\centering\Huge\rm\bfseries}
 \ChNumVar{\Huge}  
 \ChRuleWidth{2pt}
 \ChTitleVar{\centering\Huge\rm}
+%-------- FCHAPTER SECTION ------------
 
-\spanishdecimal{.}
-\usepackage{booktabs} % Allows the use of \toprule, \midrule and \bottomrule in tables for horizontal lines
 
+%-------- HYPERREF SECTION ------------
 
 % hyperref.sty parameters
 % more info in http://en.wikibooks.org/wiki/LaTeX/Hyperlinks
 \hypersetup{
-    bookmarks=true,         % show bookmarks bar?
-    %unicode=true,          % non-Latin characters in Acrobat?s bookmarks
-    %pdftoolbar=true,        % show Acrobat?s toolbar?
-    %pdfmenubar=true,        % show Acrobat?s menu?
-    %pdffitwindow=false,     % window fit to page when opened
-    %pdfstartview={FitH},    % fits the width of the page to the window
-    %pdftitle={My title},    % title
-    pdfauthor={Oscar Barrag\'an},     % author
-    pdfsubject={Master Thesis},   % subject of the document
-    %pdfcreator={Creator},   % creator of the document
-    %pdfproducer={Producer}, % producer of the document
-    %pdfkeywords={keyword1} {key2} {key3}, % list of keywords
-    %pdfnewwindow=true,      % links in new window
-    colorlinks=true,       % false: boxed links; true: colored links
-    linkcolor=red,          % color of internal links (change box color with linkbordercolor)
-    citecolor=blue,        % color of links to bibliography
-    filecolor=magenta,      % color of file links
-    urlcolor=blue     % color of external links
+    bookmarks=true,			% show bookmarks bar?
+    %unicode=true,          		% non-Latin characters in Acrobat?s bookmarks
+    %pdftoolbar=true,        		% show Acrobat?s toolbar?
+    %pdfmenubar=true,        		% show Acrobat?s menu?
+    %pdffitwindow=false,     		% window fit to page when opened
+    %pdfstartview={FitH},    		% fits the width of the page to the window
+    %pdftitle={My title},    		% title
+    pdfauthor={Oscar Barrag\'an},     	% author
+    pdfsubject={Master Thesis},   	% subject of the document
+    pdfcreator={Oscar Barraga\'an},   	% creator of the document
+    %pdfnewwindow=true,      		% links in new window
+    colorlinks=true,       		% false: boxed links; true: colored links
+    linkcolor=red,     	% color of internal links (change box color with linkbordercolor)
+    citecolor=blue,       		% color of links to bibliography
+    filecolor=magenta,      		% color of file links
+    urlcolor=blue     			% color of external links
 }
 
+%-------- HYPERREF SECTION ------------
